Added LMAO to the end of a cell

--- a/four_corners.ipynb
+++ b/four_corners.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "c4105151",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,9 @@
     "\n",
     "        W += delta_W\n",
     "    \n",
-    "    return W"
+    "    return W\n",
+    "\n",
+    "# LMAO"
    ]
   },
   {
